--- a/wp-content/themes/ecokaishu/_scss/style.scss
+++ b/wp-content/themes/ecokaishu/_scss/style.scss
@@ -71,6 +71,8 @@ $facebook: #3b5998;
 @import "pages/price.scss";
 @import "pages/about.scss";
 @import "pages/faq.scss";
+@import "pages/problems.scss";
+@import "pages/staff.scss";
 
 @import "pages/campaign.scss";
 @import "pages/achivements.scss";
