--- a/wp-content/themes/ecokaishu/_scss/style.scss
+++ b/wp-content/themes/ecokaishu/_scss/style.scss
@@ -73,6 +73,7 @@ $facebook: #3b5998;
 @import "pages/faq.scss";
 @import "pages/problems.scss";
 @import "pages/staff.scss";
+@import "pages/accomplishment.scss";
 
 @import "pages/campaign.scss";
 @import "pages/achivements.scss";
