--- a/wp-content/themes/ecokaishu/_scss/base/_common.scss
+++ b/wp-content/themes/ecokaishu/_scss/base/_common.scss
@@ -628,6 +628,147 @@ a{
 }
 
 //**********************************************************************
+// .behind
+//**********************************************************************
+
+.behind{
+	
+
+	// h3
+	//**************************************************************
+
+	h3{
+		display: none;
+	}
+
+	// li
+	//**************************************************************
+	
+	li{
+
+		background: {
+			image: url("assets/img/campaign/0000/00_bg.gif") !important;
+			position: center top;
+			repeat: no-repeat;
+			color: #E4E4E4 !important;
+			size: 200% !important;
+		}
+		text-align: center;
+
+		//a
+		a{
+
+			display: block;
+			position: relative;
+			padding: 2.0rem 0;
+			color: $darkGray;
+			text-decoration: none;
+
+			//p
+			p{
+
+				margin-top: 1.0rem;
+
+				//&.info
+				&.info{
+
+					font-size: $bigger * 1.4;
+					letter-spacing: -0.1rem;
+
+					.block{
+
+						line-height: 1.0em;
+						font-weight: bold;
+
+						&:nth-of-type(1){
+							&:after{
+								display: block;
+								font-family: icomoon;
+								font-size: 90%;
+								margin: 0 0.3rem;
+								speak: none;
+								content: "\e690";
+							}
+						}
+
+					}
+
+				}
+
+				//&.off
+				&.off{
+					position: relative;
+					padding: 0.5rem 0;
+					background: $green;
+					color: $white;
+					&:after{
+						display: block;
+						position: absolute;
+						top: 50%;
+						right: 0.5rem;
+						width: 0;
+						height: 0;
+						margin-top: -5px;
+						border: 5px solid transparent;
+						border-left-color: $white;
+						content: "";
+					}
+				}
+
+			}
+
+			//.icon-bullhorn
+			.icon-bullhorn{
+				display: block;
+				width: 40px;
+				height: 40px;
+				margin: 0 auto;
+				@include border-radius(50%);
+				background: $pink;
+				color: $white;
+				text-align: center;
+				font-size: $bigger * 1.2;
+				line-height: 40px;
+			}
+
+			//&:hover
+			&:hover{
+				p{
+					&.off{
+						background: $darkBlue;
+					}
+				}
+			}
+
+		}
+		
+	}
+
+	//Mobile
+	@media all and (max-width: $maxWidth){
+
+		width: 100%;
+		background-size: 100%;
+
+		//p
+		p{
+			&.info{
+				font-size: $bigger * 1.3 !important;
+				.block{
+					display: inline !important;
+					&:after{
+						display: inline !important;
+					}
+				}
+			}
+		}
+
+	}
+
+}
+
+
+//**********************************************************************
 // .sidebar
 //**********************************************************************
 
@@ -644,6 +785,59 @@ a{
 	.contents{
 		&:not(:last-of-type){
 			margin-bottom: 3.0rem;
+		}
+	}
+
+	// .listBtn
+	//**************************************************************
+
+	.listBtn{
+
+		margin-bottom: 1.0rem;
+
+		a{
+			display: block;
+			position: relative;
+			padding: 1.0rem;
+			border: 1px solid rgba($black, .1);
+			background-color: $white;
+			color: $darkGray;
+			&:after{
+				position: absolute;
+				
+				right: 1.0rem;
+				font-family: icomoon;
+				font-size: $bigger;
+			}
+			&:hover{
+				background: $gray;
+			}
+		}
+
+		&#area{
+			a:after{
+				content: "\e8ed";
+				color: $green;
+			}
+		}
+		&#faq{
+			a:after{
+				content: "\e6ad";
+				color: $pink;
+			}
+		}
+
+	}
+
+	// .bnrBtn
+	//**************************************************************
+
+	.bnrBtn{
+
+		margin-bottom: 1.0rem;
+
+		a{
+			display: block;
 		}
 	}
 
@@ -692,6 +886,65 @@ a{
 
 		}
 
+	}
+
+	// .behind
+	//**************************************************************
+
+	.behind{
+
+		li{
+			margin-bottom: 1.0rem;
+			padding: 0.5rem;
+			border: 1px solid rgba($black, .1);
+
+			a{
+
+				padding-top: 0.5rem;
+				padding-bottom: 0.5rem;
+
+				p{
+
+					margin-top: 1.0rem;
+
+
+					//&.info
+					&.info{
+
+						display: inline-block;
+						font-size: $bigger;
+						color: $darkGray !important;
+
+						.block{
+
+							display: inline !important;
+							
+							&:nth-of-type(1){
+								&:after{
+									display: inline;
+									margin-left: 0.1rem;
+									margin-right: 0.1rem;
+								}
+							}
+
+						}
+
+					}
+
+				}
+
+				//.icon-bullhorn
+				.icon-bullhorn{
+					display: inline-block !important;
+					width: 20px;
+					height: 20px;
+					font-size: $normal;
+					line-height: 20px;
+				}
+
+			}
+
+		}
 	}
 
 }
