--- a/wp-content/themes/ecokaishu/_scss/pages/_home.scss
+++ b/wp-content/themes/ecokaishu/_scss/pages/_home.scss
@@ -61,10 +61,13 @@ h3{
 }
 
 //**********************************************************************
-// #sliderCampaign
+// #sliderCampaignNews
 //**********************************************************************
 
-#sliderCampaign{
+#sliderCampaignNews{
+
+	background: none !important;
+	border: none !important;
 
 	h3, h4{
 		display: none;
@@ -134,6 +137,110 @@ h3{
 		background: $darkGray;
 	}
 
+	// #news
+	// **************************************************************
+
+	#news{
+
+		display: table;
+		margin-top: 10px;
+		background: $yellow;
+
+		//h3
+		h3{
+
+			display: table-cell;
+			width: 15%;
+			margin: 0;
+			padding: 0.5rem;
+			@include box-sizing(border-box);
+			font-size: $normal;
+			text-align: center;
+			vertical-align: middle;
+			background: $darkBlue;
+			color: $white;
+
+			&:before{
+				display: inline-block;
+				font-family: icomoon;
+				margin-right: 0.2rem;
+				content: "\e8c4";
+				-webkit-font-smoothing: antialiased;
+				-moz-osx-font-smoothing: grayscale;
+			}
+
+		}
+
+		ul{
+			
+			display: table-cell;
+			width: 85%;
+			vertical-align: middle;
+
+		//li
+		li{
+
+			padding: 0.5rem 1.0rem;
+			line-height: 1.3em;
+
+			//:first-of-type
+			/*&:first-child{
+				.newsTxt{
+					&:before{
+						display: inline-block;
+						margin-right: 0.3rem;
+						padding: 0.1rem 0.3rem;
+						background: $pink;
+						color: $white;
+						font-size: 85%;
+						content: "NEW";
+					}
+				}
+			}*/
+
+			
+
+			//a
+			a{
+				display: block;
+				color: $darkGray;
+				text:{
+					decoration: none;
+				}
+				time{
+					display: inline-block;
+					margin-right: 0.3rem;
+				}
+				.tag{
+					display: inline-block;
+					margin-right: 0.3rem;
+					color: $darkBlue;
+					font-weight: bold;
+				}
+			}
+
+		}
+		}
+
+	}
+
+	//PC
+	@media all and (min-width: $minWidth){
+		width: 645px !important;
+	}
+
+}
+
+//**********************************************************************
+// .behind
+//**********************************************************************
+
+.behind{
+
+	//PC
+	@media all and (min-width: $minWidth){
+	}
+
 }
 
 //**********************************************************************
@@ -141,6 +248,9 @@ h3{
 //**********************************************************************
 
 #shortcuts{
+
+	border: none !important;
+	background: none !important;
 
 	// h3
 	//**************************************************************
@@ -258,6 +368,9 @@ h3{
 
 #indexs{
 
+	border: none !important;
+	background: none !important;
+
 	// h3
 	//**************************************************************
 
@@ -265,66 +378,62 @@ h3{
 		display: none;
 	}
 
-	// .item
-	//**************************************************************
-	
-	.item{
+	ul{
 
-		overflow: hidden;
-		background: $white;
+		display: inline-table;
+		table-layout: fixed;
+		width: 100%;
 
-		//a
-		a{
-			display: block;
-			position: relative;
-			padding: 1.0rem 0.5rem;
-			color: $darkGray;
-			text-decoration: none;
-			&:hover{
-				color: $green;
-			}
-		}
+		li{
 
-		//PC
-		@media all and (min-width: $minWidth){
+			display: table-cell;
+			width: 33.33333%;
+			vertical-align: middle;
+
+			// a
+			//**************************************************************
 
 			a{
+				display: table-cell;
+				line-height: 1.2em;
+				margin: 0 auto;
+				width: 140px;
+				height: 140px;
+				border: 1px solid rgba($black, .1);
+				@include border-radius(50%);
+				color: $white;
 				text-align: center;
+				text-decoration: none;
+				vertical-align: middle;
+
+				&#estimate{ background: $pink; }
+				&#contact{ background: $orange; }
+				&#tel{ background: $green; }
+
+				&:hover{
+					background: $white !important;
+					color: $darkGray !important;
+				}
+
 				span{
-					&[class^="icon-"]{
-						display: inline-block;
-						margin-bottom: 0.5rem;
-						font-size: $biggest * 1.8;
-						line-height: 70px;
-						vertical-align: middle;
-					}
-					&.indexTitle{
+					&[class^="icon"]{
 						display: block;
+						font-size: $biggest;
+						-webkit-font-smoothing: antialiased;
+						-moz-osx-font-smoothing: grayscale;
 					}
 				}
 			}
-
 		}
 
-		//Mobile
-		@media all and (max-width: $maxWidth){
+	}
 
-			a{
-				&:after{
-					display: block;
-					position: absolute;
-					top: 50%;
-					right: 1.0rem;
-					width: 0;
-					height: 0;
-					margin-top: -4px;
-					border: 4px solid transparent;
-					border-left-color: $darkGray;
-					content: "";
-				}
-			}
 
-		}
+	//PC
+	@media all and (min-width: $minWidth){
+
+		width: 455px;
+
 	}
 
 	//Mobile
@@ -421,84 +530,12 @@ h3{
 //**********************************************************************
 
 #tanabata,
-#earlybird{
+#earlybird,
+#problems .item{
 
 	//PC
 	@media all and (min-width: $minWidth){
-		width: 360px !important;
-	}
-
-}
-
-
-
-//**********************************************************************
-// #news
-//**********************************************************************
-
-#news{
-
-	// ul
-	//**************************************************************
-
-	ul{
-
-		//li
-		li{
-
-			padding: 1.0rem 0;
-
-			//:first-of-type
-			&:first-of-type{
-				.newsTxt{
-					&:before{
-						display: inline-block;
-						margin-right: 0.3rem;
-						padding: 0.1rem 0.3rem;
-						background: $pink;
-						color: $white;
-						font-size: 85%;
-						content: "NEW";
-					}
-				}
-			}
-
-			//:not(:last-of-type)
-			&:not(:last-of-type){
-				border-bottom :1px solid rgba($black, .05);
-			}
-
-			//a
-			a{
-				display: block;
-				color: $darkGray;
-				text:{
-					decoration: none;
-				}
-				time{
-					display: block;
-					letter-spacing: 0.1rem;
-					margin-bottom: 0.3rem;
-					color: $green;
-					font-weight: bold;
-				}
-				.tag{
-					display: inline-block;
-					margin-right: 0.3rem;
-					padding: 0.1rem 0.3rem;
-					background: $darkBlue;
-					color: $white;
-					font-size: 85%;
-				}
-			}
-
-		}
-
-	}
-
-	//PC
-	@media all and (min-width: $minWidth){
-		width: 360px !important;
+		width: 265px !important;
 	}
 
 }
