--- a/wp-content/themes/ecokaishu/_scss/base/_common.scss
+++ b/wp-content/themes/ecokaishu/_scss/base/_common.scss
@@ -44,14 +44,14 @@ a{
 	font-size: $normal* 3;
 	line-height: 4px;
 }
-.notices{
+/*.notices{
 	margin-bottom: 1.0rem;
 	padding: 0.5rem;
 	border: 1px solid rgba($pink, .3);
 	@include box-sizing(border-box);
 	background: rgba($pink, .2);
 	text-align: center;
-}
+}*/
 
 
 //PC
